# lcoviz

./: .gitignore  Cargo.toml  LICENCE.txt  README.md
man/: lcoviz.1
src/: core.rs  lib.rs  main.rs  operations.rs
src/adapters/cli/: cli_output.rs  help.from-file.txt  help.report.txt  help.to-file.txt  help.txt  parser.rs
src/adapters/exporters/: mpa.rs  mpa_links.rs  spa.rs
src/adapters/renderers/: file_icon.rs  html_light_renderer.rs  mock_renderer.rs  text_single_page_renderer.rs
src/adapters/renderers/components/: chip.rs  code_line.rs  file_icon.rs  function.rs  gauges.rs  navigation.rs
src/adapters/renderers/resources/: colors.css  gauge.css  html_light_renderer.css
src/aggregation/: aggregated.rs  fixtures.rs  input.rs  multi_report.rs  relative.rs  test_report.rs  tested_file.rs  tested_module.rs  tested_root.rs  with_path.rs
src/cli/: config.rs  parser.rs
src/file_provider/: mod.rs
src/html/: colors.rs  components.rs  line_to_html.rs  mod.rs  report_to_html.rs
src/input/: aggregator_input.rs  config.rs
src/mocks/: mod.rs
src/models/: components.rs  file_lines_provider.rs  html_builder.rs  to_html.rs
src/report_tree/: mod.rs
src/styles/: light.rs
src/test_utils/: builders.rs  macros.rs  mocks.rs
src/views/: index.rs
tests/fixtures/: my_code.cpp
