[package]
name = "lcov-aggregator-report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htmlescape = "0.3.1"
lcov = "0.8.1"
pathdiff = "0.2.1"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"

[dev-dependencies]
mockall = "0.12.1"
