[package]
name = "lcoviz"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to visualize LCOV coverage data"
repository = "https://github.com/Leonils/lcoviz"
readme = "README.md"
keywords = ["lcov", "coverage", "visualization"]
categories = ["development-tools"]

[dependencies]
htmlescape = "0.3.1"
lcov = "0.8.1"
pathdiff = "0.2.1"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"

[dev-dependencies]
mockall = "0.12.1"
